--- a/forgot-password.html
+++ b/forgot-password.html
@@ -21,7 +21,7 @@
     <body>
         <div class="auth-form"></div>
         <div class="w-100 d-flex justify-content-center align-items-center form-container">
-            <div class="rounded col-xl-4 col-lg-4 col-md-8 col-xs-10 p-2 shadow" style="height:300px;background:#ffffff;position: relative;">
+            <div class="rounded col-xl-4 col-lg-4 col-md-8 col-xs-10 p-2 shadow mb-3" style="height:300px;background:#ffffff;position: relative;">
                 <div class="brand d-flex justify-content-center">
                     <img src="assets/images/logo.png" class="mt-1" width="95px" height="95px">
                 </div>
