--- a/chat.html
+++ b/chat.html
@@ -39,13 +39,13 @@
                             </li>
                         </ul>    
                     </li>
-                    <li class="p-0 navItem activeNavItem" data-toggle="true">
+                    <li class="p-0 navItem" data-toggle="true">
                         <a href="#" class="nav-item">
                             <i class="fa fa-users"></i>
                             <span class="text-light thumbed">المستخدمين</span>
                             <i class="fa fa-angle-down pull-right thumbed"></i>
                         </a>
-                        <ul class="sub-menu dropdown-menu">
+                        <ul class="sub-menu">
                             <li class="active">
                                 <a href="#" class="sub-item">
                                     <i class="fa fa-users"></i>
@@ -114,7 +114,7 @@
                             <span class="text-light thumbed">التقارير</span>
                             <i class="fa fa-angle-down pull-right thumbed"></i>
                         </a>
-                        <ul class="sub-menu dropdown-menu">
+                        <ul class="sub-menu">
                             <li class="active">
                                 <a href="#" class="sub-item">
                                     <i class="fa fa-file"></i>
@@ -203,7 +203,7 @@
                 <header class="header shadow d-flex justify-content-between align-items-center w-100">
                     <div class="greeting-section d-flex align-items-center">
                         <i class="fa fa-bars pointer"></i>
-                        <div class="item">
+                        <div  class="item">
                             <img style="position: relative;" src="assets/images/logo.png" class="header-icon pointer circle-image" width="33px" height="33px">                        
                             <div class="shadow header-box item-box" style="min-height: 20px;">
                                 <ul style="overflow-y: hidden;padding:0px;" >
@@ -254,49 +254,173 @@
                 </header>
                 <div class="container-fluid w-100">
                     <div class="page-identifier d-flex mt-3">
-                        <p style="font-size:16px;">الصفحة الرئيسية</p>
+                        <p style="font-size:16px;">العمليات</p>
                         <i class="fa fa-angle-double-left text-primary" style="position: relative;top:7.6px;"></i>
                         <i class="fa fa-angle-double-right text-primary" style="position: relative;top:7.6px;"></i>
-                        <p style="font-size:16px;" class="text-primary">صفحة المتابعة</p>
+                        <p style="font-size:16px;" class="text-primary">المحادثات</p>
                     </div>
                     <div class="container-fluid">
                         <div class="row">
-                            <div class="col-xl-6 col-lg-12 col-md-12 col-xs-12">
-                                <div class="im-card">
+                            <div class="col-xl-12 col-lg-12 col-md-12 col-xs-12">
+                                <div class="im-card" style="width: 100%;height:75%;">
                                     <div class="im-card-header">
-                                        <h4>تقرير بياني</h4>
+                                        <h4>المحادثات</h4>
                                     </div>
-                                    <div id="firstReport" class="report"></div>
+                                    <div class="row" style="min-height:100vh;max-height:100vh;">
+                                        <!-- right side -->
+                                        <div class="col-lg-4 col-md-12 border-active chats-container custom-scrollbar" id="latestChats" style="overflow-y: scroll;height:77vh;position:relative;">
+                                             <i class="fa fa-times closeChat" style="position: absolute;top:8px;left:15px;"></i>
+                                             <ul class="chats pointer custom-scrollbar">
+                                                 <li class="chat d-flex align-items-center justify-content-start">
+                                                    <img src="assets/images/logo.png" class="rounded-circle border-primary" height="60px" width="50px">
+                                                    <div class="chat-content">
+                                                        <h6 class="chat-text">ahmed abubaker</h6>
+                                                        <p class="chat-text">hey</p>
+                                                    </div>
+                                                 </li>
+                                                 <li class="chat d-flex align-items-center justify-content-start">
+                                                    <img src="assets/images/logo.png" class="rounded-circle border-primary" height="60px" width="50px">
+                                                    <div class="chat-content">
+                                                        <h6 class="chat-text">ahmed abubaker</h6>
+                                                        <p class="chat-text">hey</p>
+                                                    </div>
+                                                 </li>
+                                                 <li class="chat d-flex align-items-center justify-content-start">
+                                                    <img src="assets/images/logo.png" class="rounded-circle border-primary" height="60px" width="50px">
+                                                    <div class="chat-content">
+                                                        <h6 class="chat-text">ahmed abubaker</h6>
+                                                        <p class="chat-text">hey</p>
+                                                    </div>
+                                                 </li>
+                                                 <li class="chat d-flex align-items-center justify-content-start">
+                                                    <img src="assets/images/logo.png" class="rounded-circle border-primary" height="60px" width="50px">
+                                                    <div class="chat-content">
+                                                        <h6 class="chat-text">ahmed abubaker</h6>
+                                                        <p class="chat-text">hey</p>
+                                                    </div>
+                                                 </li>
+                                                 <li class="chat d-flex align-items-center justify-content-start">
+                                                    <img src="assets/images/logo.png" class="rounded-circle border-primary" height="60px" width="50px">
+                                                    <div class="chat-content">
+                                                        <h6 class="chat-text">ahmed abubaker</h6>
+                                                        <p class="chat-text">hey</p>
+                                                    </div>
+                                                 </li>
+                                                 <li class="chat d-flex align-items-center justify-content-start">
+                                                    <img src="assets/images/logo.png" class="rounded-circle border-primary" height="60px" width="50px">
+                                                    <div class="chat-content">
+                                                        <h6 class="chat-text">ahmed abubaker</h6>
+                                                        <p class="chat-text">hey</p>
+                                                    </div>
+                                                 </li>
+                                                 <li class="chat d-flex align-items-center justify-content-start">
+                                                    <img src="assets/images/logo.png" class="rounded-circle border-primary" height="60px" width="50px">
+                                                    <div class="chat-content">
+                                                        <h6 class="chat-text">ahmed abubaker</h6>
+                                                        <p class="chat-text">hey</p>
+                                                    </div>
+                                                 </li>
+                                                 <li class="chat d-flex align-items-center justify-content-start">
+                                                    <img src="assets/images/logo.png" class="rounded-circle border-primary" height="60px" width="50px">
+                                                    <div class="chat-content">
+                                                        <h6 class="chat-text">ahmed abubaker</h6>
+                                                        <p class="chat-text">hey</p>
+                                                    </div>
+                                                 </li>
+                                                 <li class="chat d-flex align-items-center justify-content-start">
+                                                    <img src="assets/images/logo.png" class="rounded-circle border-primary" height="60px" width="50px">
+                                                    <div class="chat-content">
+                                                        <h6 class="chat-text">ahmed addbubaker</h6>
+                                                        <p class="chat-text">hey</p>
+                                                    </div>
+                                                 </li>
+                                             </ul>   
+                                        </div>
+                                        <!-- right side -->
+                                        <!-- left side -->
+                                        <div class="col-lg-8 col-md-12 border-active" id="conversation" style="position:relative;padding-right:0px;background:#f0f2f5;">
+                                            <div class="shadow">
+                                                <li class="chat m-1 d-flex align-items-center justify-content-start">
+                                                    <i class="fa fa-chevron-right p-2 text-light bg-primary rounded openchat"></i>
+                                                    <img src="assets/images/logo.png" class="rounded-circle border-primary" height="60px" width="50px">
+                                                    <div class="chat-content">
+                                                        <h6 class="chat-text">ahmed abubaker</h6>
+                                                    </div>
+                                                 </li>              
+                                            </div>
+                                            <ul class="chats pointer pr-2 custom-scrollbar" style="position:relative;overflow-y: scroll;min-height:59vh;max-height:59vh;"> 
+                                                <li class="message-box mt-2 outgoing-message">
+                                                     <span>بسطاوي قال ليك جيب معاك باتة تمبش</span>
+                                                 </li>   
+                                                 <li class="message-box mt-2 incomming-message">
+                                                     <span>بسطاوي قال ليك جيب معاك باتة تمبش</span>
+                                                 </li>  
+                                                 <li class="message-box mt-2 outgoing-message">
+                                                    <span>بسطاوي قال ليك جيب معاك باتة تمبش</span>
+                                                </li>    
+                                                 <li class="message-box mt-2 incomming-message">
+                                                     <span>بسطاوي قال ليك جيب معاك باتة تمبش</span>
+                                                 </li>  
+                                                 <li class="message-box mt-2 outgoing-message">
+                                                     <span>بسطاوي قال ليك جيب معاك باتة تمبش</span>
+                                                 </li>   
+                                                 <li class="message-box mt-2 incomming-message">
+                                                     <span>بسطاوي قال ليك جيب معاك باتة تمبش</span>
+                                                 </li>  
+                                                 <li class="message-box mt-2 outgoing-message">
+                                                    <span>بسطاوي قال ليك جيب معاك باتة تمبش</span>
+                                                </li>    
+                                                 <li class="message-box mt-2 incomming-message">
+                                                     <span>بسطاوي قال ليك جيب معاك باتة تمبش</span>
+                                                 </li>  
+                                                 <li class="message-box mt-2 outgoing-message">
+                                                     <span>بسطاوي قال ليك جيب معاك باتة تمبش</span>
+                                                 </li>   
+                                                 <li class="message-box mt-2 incomming-message">
+                                                     <span>بسطاوي قال ليك جيب معاك باتة تمبش</span>
+                                                 </li>  
+                                                 <li class="message-box mt-2 outgoing-message">
+                                                    <span>بسطاوي قال ليك جيب معاك باتة تمبش</span>
+                                                </li>    
+                                                 <li class="message-box mt-2 incomming-message">
+                                                     <span>بسطاوي قال ليك جيب معاك باتة تمبش</span>
+                                                 </li>  
+                                                 <li class="message-box mt-2 outgoing-message">
+                                                     <span>بسطاوي قال ليك جيب معاك باتة تمبش</span>
+                                                 </li>   
+                                                 <li class="message-box mt-2 incomming-message">
+                                                     <span>بسطاوي قال ليك جيب معاك باتة تمبش</span>
+                                                 </li>  
+                                                 <li class="message-box mt-2 outgoing-message">
+                                                    <span>بسطاوي قال ليك جيب معاك باتة تمبش</span>
+                                                </li>    
+                                                 <li class="message-box mt-2 incomming-message">
+                                                     <span>بسطاوي قال ليك جيب معاك باتة تمبش</span>
+                                                 </li>  
+                                                 <li class="message-box mt-2 outgoing-message">
+                                                     <span>بسطاوي قال ليك جيب معاك باتة تمبش</span>
+                                                 </li>   
+                                                 <li class="message-box mt-2 incomming-message">
+                                                     <span>بسطاوي قال ليك جيب معاك باتة تمبش</span>
+                                                 </li>  
+                                                 <li class="message-box mt-2 outgoing-message">
+                                                    <span>بسطاوي قال ليك جيب معاك باتة تمبش</span>
+                                                </li>    
+                                                 <li class="message-box mt-2 incomming-message">
+                                                     <span>بسطاوي قال ليك جيب معاك باتة تمبش</span>
+                                                 </li>  
+                                            </ul>    
+                                            <div class="d-flex w-100" style="position: sticky;bottom: 0%;width: 44%;">
+                                                <input class="form-control rounded-pill" name="message-content" id="message-content">
+                                                <div style="margin-right:5px;" class="bg-primary d-flex p-2 rounded pointer align-items-center justify-content-center">
+                                                    <i class="far fa-paper-plane text-light"></i>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <!-- left side -->
+                                    </div>
                                 </div>
                             </div>
-                            <!-- end -->
-                            <div class="col-xl-6 col-lg-12 col-md-12 col-xs-12">
-                                <div class="im-card">
-                                    <div class="im-card-header">
-                                        <h4>تقرير بياني</h4>
-                                    </div>
-                                    <div id="secondReport" class="report"></div>
-                                </div>
-                            </div>
-                            <!-- end -->
-                            <div class="col-xl-6 col-lg-12 col-md-12 col-xs-12">
-                                <div class="im-card">
-                                    <div class="im-card-header">
-                                        <h4>تقرير بياني</h4>
-                                    </div>
-                                    <div id="thirdReport" class="report"></div>
-                                </div>
-                            </div>
-                            <!-- end -->
-                            <div class="col-xl-6 col-lg-12 col-md-12 col-xs-12">
-                                <div class="im-card">
-                                    <div class="im-card-header">
-                                        <h4>تقرير بياني</h4>
-                                    </div>
-                                    <div id="fourthReport" class="report"></div>
-                                </div>
-                            </div>
-                            <!-- end -->
                         </div>
                     </div>
                 </div>
@@ -306,7 +430,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
-        <script src="assets/js/charts.js"></script>
         <script src="assets/js/app.js"></script> 
     </body>
 </html>
