--- a/editProfile.html
+++ b/editProfile.html
@@ -39,13 +39,13 @@
                             </li>
                         </ul>    
                     </li>
-                    <li class="p-0 navItem activeNavItem" data-toggle="true">
+                    <li class="p-0 navItem" data-toggle="true">
                         <a href="#" class="nav-item">
                             <i class="fa fa-users"></i>
                             <span class="text-light thumbed">المستخدمين</span>
                             <i class="fa fa-angle-down pull-right thumbed"></i>
                         </a>
-                        <ul class="sub-menu dropdown-menu">
+                        <ul class="sub-menu">
                             <li class="active">
                                 <a href="#" class="sub-item">
                                     <i class="fa fa-users"></i>
@@ -114,7 +114,7 @@
                             <span class="text-light thumbed">التقارير</span>
                             <i class="fa fa-angle-down pull-right thumbed"></i>
                         </a>
-                        <ul class="sub-menu dropdown-menu">
+                        <ul class="sub-menu">
                             <li class="active">
                                 <a href="#" class="sub-item">
                                     <i class="fa fa-file"></i>
@@ -203,7 +203,7 @@
                 <header class="header shadow d-flex justify-content-between align-items-center w-100">
                     <div class="greeting-section d-flex align-items-center">
                         <i class="fa fa-bars pointer"></i>
-                        <div class="item">
+                        <div  class="item">
                             <img style="position: relative;" src="assets/images/logo.png" class="header-icon pointer circle-image" width="33px" height="33px">                        
                             <div class="shadow header-box item-box" style="min-height: 20px;">
                                 <ul style="overflow-y: hidden;padding:0px;" >
@@ -257,46 +257,81 @@
                         <p style="font-size:16px;">الصفحة الرئيسية</p>
                         <i class="fa fa-angle-double-left text-primary" style="position: relative;top:7.6px;"></i>
                         <i class="fa fa-angle-double-right text-primary" style="position: relative;top:7.6px;"></i>
-                        <p style="font-size:16px;" class="text-primary">صفحة المتابعة</p>
+                        <p style="font-size:16px;" class="text-primary">الملف الشخصي</p>
                     </div>
                     <div class="container-fluid">
                         <div class="row">
-                            <div class="col-xl-6 col-lg-12 col-md-12 col-xs-12">
-                                <div class="im-card">
+                            <div class="col-xl-12 col-lg-12 col-md-12 col-xs-12">
+                                <div class="im-card" style="width: 100%;min-height:490px">
                                     <div class="im-card-header">
-                                        <h4>تقرير بياني</h4>
+                                        <h4>تعديل الملف الشخصي</h4>
                                     </div>
-                                    <div id="firstReport" class="report"></div>
+                                    <div class="items d-flex m-2">
+                                        <div id="rightItem" class="rounded d-flex align-items-center justify-content-center border p-2 pointer border-active activeRightTab">
+                                            تعديل الملف الشخصي
+                                        </div>
+                                        <div id="leftItem" class="rounded d-flex align-items-center justify-content-center border p-2 pointer border-active">
+                                            تغيير كلمة المرور
+                                        </div>
+                                    </div>
+                                    <div class="forms-container m-2 d-none" id="editPassword">
+                                        <form action="" method="" enctype="multipart/form-data">  
+                                            <div class="row">
+                                                <div class="col-md-6 col-xs-12">
+                                                    <div class="form-group mt-2">
+                                                        <label for="password" class="form-control-label">كلمة المرور</label>
+                                                        <input type="password" name="password" id="password" class="form-control">  
+                                                    </div>
+                                                    <div class="form-group mt-2">
+                                                        <input type="submit" value="submit" class="mt-2 p-2 btn btn-primary rounded">
+                                                    </div>
+                                                </div>    
+                                            </div>    
+                                        </form>
+                                    </div>
+                                    <div class="forms-container m-2" id="editProfile">
+                                        <form action="" method="" enctype="multipart/form-data">   
+                                            <div class="row">
+                                                <div class="col-md-6 col-xs-12">
+                                                    <div class="form-group mt-2">
+                                                        <label for="name" class="form-control-label">الاسم</label>
+                                                        <input type="text" name="name" id="name" class="form-control">  
+                                                    </div>
+                                                    <div class="form-group mt-2">
+                                                        <label for="email" class="form-control-label">البريد الإلكتروني</label>
+                                                        <input type="text" name="email" id="email" class="form-control">  
+                                                    </div>
+                                                    <div class="form-group mt-2">
+                                                        <label for="address" class="form-control-label">العنوان</label>
+                                                        <input type="text" name="address" id="address" class="form-control">  
+                                                    </div>
+                                                    <div class="form-group mt-2">
+                                                        <label for="address" class="form-control-label">الدولة</label>
+                                                        <select class="form-control">
+
+                                                        </select>  
+                                                    </div>
+                                                    <div class="form-group mt-2">
+                                                        <label for="picture" class="form-control-label w-100">اختيار الصورة</label>
+                                                        <button class="btn btn-primary">اختيار الصورة</button>
+                                                        <input type="file" name="picture" id="picture" class="d-none">
+                                                    </div>
+                                                    <div class="form-group mt-2">
+                                                        <label for="cover" class="form-control-label w-100">اختيار الغلاف</label>
+                                                        <button class="btn btn-primary">اختيار الغلاف</button>
+                                                        <input type="file" name="cover" id="cover" class="d-none">
+                                                    </div>
+                                                    <input type="submit" value="submit" class="mt-2 p-2 btn btn-primary rounded">
+                                                </div>
+                                                <div class="col-md-6 col-xs-12">
+                                                    <img src="assets/images/logo.png" id="image" name="image" class="mt-2" height="100px" width="100px">
+                                                    <img src="assets/images/logo.png" id="coverImage" name="coverImage" class="mt-2" height="100px" width="100px">
+                                                </div>    
+                                            </div>    
+                                        </form>
+                                    </div>
                                 </div>
                             </div>
-                            <!-- end -->
-                            <div class="col-xl-6 col-lg-12 col-md-12 col-xs-12">
-                                <div class="im-card">
-                                    <div class="im-card-header">
-                                        <h4>تقرير بياني</h4>
-                                    </div>
-                                    <div id="secondReport" class="report"></div>
-                                </div>
-                            </div>
-                            <!-- end -->
-                            <div class="col-xl-6 col-lg-12 col-md-12 col-xs-12">
-                                <div class="im-card">
-                                    <div class="im-card-header">
-                                        <h4>تقرير بياني</h4>
-                                    </div>
-                                    <div id="thirdReport" class="report"></div>
-                                </div>
-                            </div>
-                            <!-- end -->
-                            <div class="col-xl-6 col-lg-12 col-md-12 col-xs-12">
-                                <div class="im-card">
-                                    <div class="im-card-header">
-                                        <h4>تقرير بياني</h4>
-                                    </div>
-                                    <div id="fourthReport" class="report"></div>
-                                </div>
-                            </div>
-                            <!-- end -->
                         </div>
                     </div>
                 </div>
@@ -306,7 +341,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
-        <script src="assets/js/charts.js"></script>
         <script src="assets/js/app.js"></script> 
     </body>
 </html>
