--- a/notifications.html
+++ b/notifications.html
@@ -39,13 +39,13 @@
                             </li>
                         </ul>    
                     </li>
-                    <li class="p-0 navItem activeNavItem" data-toggle="true">
+                    <li class="p-0 navItem" data-toggle="true">
                         <a href="#" class="nav-item">
                             <i class="fa fa-users"></i>
                             <span class="text-light thumbed">المستخدمين</span>
                             <i class="fa fa-angle-down pull-right thumbed"></i>
                         </a>
-                        <ul class="sub-menu dropdown-menu">
+                        <ul class="sub-menu">
                             <li class="active">
                                 <a href="#" class="sub-item">
                                     <i class="fa fa-users"></i>
@@ -114,7 +114,7 @@
                             <span class="text-light thumbed">التقارير</span>
                             <i class="fa fa-angle-down pull-right thumbed"></i>
                         </a>
-                        <ul class="sub-menu dropdown-menu">
+                        <ul class="sub-menu">
                             <li class="active">
                                 <a href="#" class="sub-item">
                                     <i class="fa fa-file"></i>
@@ -203,7 +203,7 @@
                 <header class="header shadow d-flex justify-content-between align-items-center w-100">
                     <div class="greeting-section d-flex align-items-center">
                         <i class="fa fa-bars pointer"></i>
-                        <div class="item">
+                        <div  class="item">
                             <img style="position: relative;" src="assets/images/logo.png" class="header-icon pointer circle-image" width="33px" height="33px">                        
                             <div class="shadow header-box item-box" style="min-height: 20px;">
                                 <ul style="overflow-y: hidden;padding:0px;" >
@@ -257,46 +257,139 @@
                         <p style="font-size:16px;">الصفحة الرئيسية</p>
                         <i class="fa fa-angle-double-left text-primary" style="position: relative;top:7.6px;"></i>
                         <i class="fa fa-angle-double-right text-primary" style="position: relative;top:7.6px;"></i>
-                        <p style="font-size:16px;" class="text-primary">صفحة المتابعة</p>
+                        <p style="font-size:16px;" class="text-primary">الإشعارات</p>
                     </div>
                     <div class="container-fluid">
                         <div class="row">
-                            <div class="col-xl-6 col-lg-12 col-md-12 col-xs-12">
-                                <div class="im-card">
+                            <div class="col-xl-12 col-lg-12 col-md-12 col-xs-12">
+                                <div class="im-card" style="width: 100%;">
                                     <div class="im-card-header">
-                                        <h4>تقرير بياني</h4>
+                                        <h4>الإشعارات</h4>
                                     </div>
-                                    <div id="firstReport" class="report"></div>
+                                    <ul class="custom-scrollbar" style="max-height: 95%;overflow-y: scroll;">
+                                        <li>
+                                            <div class="d-flex">
+                                                <img src="assets/images/logo.png" class="rounded-circle" height="80px" width="80px">
+                                                <div class="notificationData">
+                                                    <div class="d-flex w-100" style="margin-top:0px;margin-bottom: 0px;padding-top: 0px;padding-bottom: 0px;">
+                                                        <p  class="notificationText">اسند اليك</p>    
+                                                        <h5 class="text-primary notificationText">mohammed</h5> 
+                                                        <p  class="notificationText">مهمة</p>   
+                                                        <h4 class="text-primary">عليك مراجعة تفاصيل الجداول القديمة</h4>
+                                                    </div>  
+                                                    <i class="far fa-clock text-secondary"></i>
+                                                    <span>2022-2-22 2:30</span>
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="d-flex">
+                                                <img src="assets/images/logo.png" class="rounded-circle" height="80px" width="80px">
+                                                <div class="notificationData">
+                                                    <div class="d-flex w-100" style="margin-top:0px;margin-bottom: 0px;padding-top: 0px;padding-bottom: 0px;">
+                                                        <p  class="notificationText">اسند اليك</p>    
+                                                        <h5 class="text-primary notificationText">mohammed</h5> 
+                                                        <p  class="notificationText">مهمة</p>   
+                                                        <h4 class="text-primary">عليك مراجعة تفاصيل الجداول القديمة</h4>
+                                                    </div>  
+                                                    <i class="far fa-clock text-secondary"></i>
+                                                    <span>2022-2-22 2:30</span>
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="d-flex">
+                                                <img src="assets/images/logo.png" class="rounded-circle" height="80px" width="80px">
+                                                <div class="notificationData">
+                                                    <div class="d-flex w-100" style="margin-top:0px;margin-bottom: 0px;padding-top: 0px;padding-bottom: 0px;">
+                                                        <p  class="notificationText">اسند اليك</p>    
+                                                        <h5 class="text-primary notificationText">mohammed</h5> 
+                                                        <p  class="notificationText">مهمة</p>   
+                                                        <h4 class="text-primary">عليك مراجعة تفاصيل الجداول القديمة</h4>
+                                                    </div>  
+                                                    <i class="far fa-clock text-secondary"></i>
+                                                    <span>2022-2-22 2:30</span>
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="d-flex">
+                                                <img src="assets/images/logo.png" class="rounded-circle" height="80px" width="80px">
+                                                <div class="notificationData">
+                                                    <div class="d-flex w-100" style="margin-top:0px;margin-bottom: 0px;padding-top: 0px;padding-bottom: 0px;">
+                                                        <p  class="notificationText">اسند اليك</p>    
+                                                        <h5 class="text-primary notificationText">mohammed</h5> 
+                                                        <p  class="notificationText">مهمة</p>   
+                                                        <h4 class="text-primary">عليك مراجعة تفاصيل الجداول القديمة</h4>
+                                                    </div>  
+                                                    <i class="far fa-clock text-secondary"></i>
+                                                    <span>2022-2-22 2:30</span>
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="d-flex">
+                                                <img src="assets/images/logo.png" class="rounded-circle" height="80px" width="80px">
+                                                <div class="notificationData">
+                                                    <div class="d-flex w-100" style="margin-top:0px;margin-bottom: 0px;padding-top: 0px;padding-bottom: 0px;">
+                                                        <p  class="notificationText">اسند اليك</p>    
+                                                        <h5 class="text-primary notificationText">mohammed</h5> 
+                                                        <p  class="notificationText">مهمة</p>   
+                                                        <h4 class="text-primary">عليك مراجعة تفاصيل الجداول القديمة</h4>
+                                                    </div>  
+                                                    <i class="far fa-clock text-secondary"></i>
+                                                    <span>2022-2-22 2:30</span>
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="d-flex">
+                                                <img src="assets/images/logo.png" class="rounded-circle" height="80px" width="80px">
+                                                <div class="notificationData">
+                                                    <div class="d-flex w-100" style="margin-top:0px;margin-bottom: 0px;padding-top: 0px;padding-bottom: 0px;">
+                                                        <p  class="notificationText">اسند اليك</p>    
+                                                        <h5 class="text-primary notificationText">mohammed</h5> 
+                                                        <p  class="notificationText">مهمة</p>   
+                                                        <h4 class="text-primary">عليك مراجعة تفاصيل الجداول القديمة</h4>
+                                                    </div>  
+                                                    <i class="far fa-clock text-secondary"></i>
+                                                    <span>2022-2-22 2:30</span>
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="d-flex">
+                                                <img src="assets/images/logo.png" class="rounded-circle" height="80px" width="80px">
+                                                <div class="notificationData">
+                                                    <div class="d-flex w-100" style="margin-top:0px;margin-bottom: 0px;padding-top: 0px;padding-bottom: 0px;">
+                                                        <p  class="notificationText">اسند اليك</p>    
+                                                        <h5 class="text-primary notificationText">mohammed</h5> 
+                                                        <p  class="notificationText">مهمة</p>   
+                                                        <h4 class="text-primary">عليك مراجعة تفاصيل الجداول القديمة</h4>
+                                                    </div>  
+                                                    <i class="far fa-clock text-secondary"></i>
+                                                    <span>2022-2-22 2:30</span>
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="d-flex">
+                                                <img src="assets/images/logo.png" class="rounded-circle" height="80px" width="80px">
+                                                <div class="notificationData">
+                                                    <div class="d-flex w-100" style="margin-top:0px;margin-bottom: 0px;padding-top: 0px;padding-bottom: 0px;">
+                                                        <p  class="notificationText">اسند اليك</p>    
+                                                        <h5 class="text-primary notificationText">mohammed</h5> 
+                                                        <p  class="notificationText">مهمة</p>   
+                                                        <h4 class="text-primary">عليك مراجعة تفاصيل الجداول القديمة</h4>
+                                                    </div>  
+                                                    <i class="far fa-clock text-secondary"></i>
+                                                    <span>2022-2-22 2:30</span>
+                                                </div>
+                                            </div>
+                                        </li>
+                                    </ul>
                                 </div>
                             </div>
-                            <!-- end -->
-                            <div class="col-xl-6 col-lg-12 col-md-12 col-xs-12">
-                                <div class="im-card">
-                                    <div class="im-card-header">
-                                        <h4>تقرير بياني</h4>
-                                    </div>
-                                    <div id="secondReport" class="report"></div>
-                                </div>
-                            </div>
-                            <!-- end -->
-                            <div class="col-xl-6 col-lg-12 col-md-12 col-xs-12">
-                                <div class="im-card">
-                                    <div class="im-card-header">
-                                        <h4>تقرير بياني</h4>
-                                    </div>
-                                    <div id="thirdReport" class="report"></div>
-                                </div>
-                            </div>
-                            <!-- end -->
-                            <div class="col-xl-6 col-lg-12 col-md-12 col-xs-12">
-                                <div class="im-card">
-                                    <div class="im-card-header">
-                                        <h4>تقرير بياني</h4>
-                                    </div>
-                                    <div id="fourthReport" class="report"></div>
-                                </div>
-                            </div>
-                            <!-- end -->
                         </div>
                     </div>
                 </div>
@@ -306,7 +399,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
-        <script src="assets/js/charts.js"></script>
         <script src="assets/js/app.js"></script> 
     </body>
 </html>
