--- a/settings.html
+++ b/settings.html
@@ -39,13 +39,13 @@
                             </li>
                         </ul>    
                     </li>
-                    <li class="p-0 navItem activeNavItem" data-toggle="true">
+                    <li class="p-0 navItem" data-toggle="true">
                         <a href="#" class="nav-item">
                             <i class="fa fa-users"></i>
                             <span class="text-light thumbed">المستخدمين</span>
                             <i class="fa fa-angle-down pull-right thumbed"></i>
                         </a>
-                        <ul class="sub-menu dropdown-menu">
+                        <ul class="sub-menu">
                             <li class="active">
                                 <a href="#" class="sub-item">
                                     <i class="fa fa-users"></i>
@@ -114,7 +114,7 @@
                             <span class="text-light thumbed">التقارير</span>
                             <i class="fa fa-angle-down pull-right thumbed"></i>
                         </a>
-                        <ul class="sub-menu dropdown-menu">
+                        <ul class="sub-menu">
                             <li class="active">
                                 <a href="#" class="sub-item">
                                     <i class="fa fa-file"></i>
@@ -203,7 +203,7 @@
                 <header class="header shadow d-flex justify-content-between align-items-center w-100">
                     <div class="greeting-section d-flex align-items-center">
                         <i class="fa fa-bars pointer"></i>
-                        <div class="item">
+                        <div  class="item">
                             <img style="position: relative;" src="assets/images/logo.png" class="header-icon pointer circle-image" width="33px" height="33px">                        
                             <div class="shadow header-box item-box" style="min-height: 20px;">
                                 <ul style="overflow-y: hidden;padding:0px;" >
@@ -235,49 +235,8 @@
                                     <a href="#">الكل</a>
                                     <span>الاشعارات</span>
                                 </div>
-                                <ul class="custom-scrollbar" style="padding: 0px;margin: 0px;height:220px;overflow-y: scroll;">
-                                    <li>
-                                        <a href="#">
-                                            <img src="assets/images/logo.png" height="40px" width="40px">
-                                            قام محمد بتنبيهك بعمل تجديدات
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <img src="assets/images/logo.png" height="40px" width="40px">
-                                            قام محمد بتنبيهك بعمل تجديدات
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <img src="assets/images/logo.png" height="40px" width="40px">
-                                            قام محمد بتنبيهك بعمل تجديدات
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <img src="assets/images/logo.png" height="40px" width="40px">
-                                            قام محمد بتنبيهك بعمل تجديدات
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <img src="assets/images/logo.png" height="40px" width="40px">
-                                            قام محمد بتنبيهك بعمل تجديدات
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <img src="assets/images/logo.png" height="40px" width="40px">
-                                            قام محمد بتنبيهك بعمل تجديدات
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <img src="assets/images/logo.png" height="40px" width="40px">
-                                            قام محمد بتنبيهك بعمل تجديدات
-                                        </a>
-                                    </li>
+                                <ul class="custom-scrollbar">
+
                                 </ul>
                                 <a href="#" class="d-flex show-all justify-content-center align-items-center">
                                     <div class="bg-primary circle-image d-flex align-items-center justify-content-center" style="margin-top:4px;width:11px;height: 11px;">
@@ -298,46 +257,17 @@
                         <p style="font-size:16px;">الصفحة الرئيسية</p>
                         <i class="fa fa-angle-double-left text-primary" style="position: relative;top:7.6px;"></i>
                         <i class="fa fa-angle-double-right text-primary" style="position: relative;top:7.6px;"></i>
-                        <p style="font-size:16px;" class="text-primary">صفحة المتابعة</p>
+                        <p style="font-size:16px;" class="text-primary">الجداول</p>
                     </div>
                     <div class="container-fluid">
                         <div class="row">
-                            <div class="col-xl-6 col-lg-12 col-md-12 col-xs-12">
-                                <div class="im-card">
+                            <div class="col-xl-12 col-lg-12 col-md-12 col-xs-12">
+                                <div class="im-card" style="width: 100%;">
                                     <div class="im-card-header">
-                                        <h4>تقرير بياني</h4>
+                                        <h4>الأعدادات</h4>
                                     </div>
-                                    <div id="firstReport" class="report"></div>
                                 </div>
                             </div>
-                            <!-- end -->
-                            <div class="col-xl-6 col-lg-12 col-md-12 col-xs-12">
-                                <div class="im-card">
-                                    <div class="im-card-header">
-                                        <h4>تقرير بياني</h4>
-                                    </div>
-                                    <div id="secondReport" class="report"></div>
-                                </div>
-                            </div>
-                            <!-- end -->
-                            <div class="col-xl-6 col-lg-12 col-md-12 col-xs-12">
-                                <div class="im-card">
-                                    <div class="im-card-header">
-                                        <h4>تقرير بياني</h4>
-                                    </div>
-                                    <div id="thirdReport" class="report"></div>
-                                </div>
-                            </div>
-                            <!-- end -->
-                            <div class="col-xl-6 col-lg-12 col-md-12 col-xs-12">
-                                <div class="im-card">
-                                    <div class="im-card-header">
-                                        <h4>تقرير بياني</h4>
-                                    </div>
-                                    <div id="fourthReport" class="report"></div>
-                                </div>
-                            </div>
-                            <!-- end -->
                         </div>
                     </div>
                 </div>
@@ -347,7 +277,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
-        <script src="assets/js/charts.js"></script>
         <script src="assets/js/app.js"></script> 
     </body>
 </html>
